--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.2.2",
     "element-plus": "^2.3.14",
+    "moment": "^2.30.1",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
