--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "http://47.108.153.136:8888"
+            "destination": "http://47.108.153.136:8888/$1"
         }
     ]
 }
